Add a few custom CEL functions
Signed-off-by: nscuro <nscuro@protonmail.com>